Added some more things in general

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     </head>
     <body>
+        <div class="overlay"></div>
         <header class="site-header">
             <nav class="header-bar">
                 <!--Hamburger nav button-->
@@ -28,7 +29,7 @@
             <!---Mobile Nav-->
             <nav class="mobile-header">
                 <button class="nav-toggle" aria-expanded="false">
-                    ☰
+                    MENU ☰
                 </button>
                 <a class="banner" href="/">LINDAHL LAB</a>
             </nav>
@@ -48,6 +49,122 @@
 
         </header>
 
+        <main>
+            <div class="welcome-title">
+                <section>
+                    <h1>WELCOME TO THE LINDAHL LAB</h1>
+                    <ul>
+                        <li>Biophysical and Bioorganic Chemistry</li>
+                        <li>Iron Metabolism in Cells</li>
+                        <li>Mechanistic Modeling of Biological Processes</li>
+                        <li>EPR and Mossbauer Spectroscopy</li>
+                        <li>Systems Biology</li>
+                    </ul>
+                </section>
+                <figure class="welcome-photo-container">
+                    <img id="welcome-photo" src="images/bp.jpg">
+                </figure>
+            </div>
+
+            <div class="PI-overview">
+                <section class="PI-profile">
+                    <h2 id="PI-overview-name">Paul A. Lindahl</h2>
+                    <h3 id="PI-overview-title">Professor</h3>
+                    <p id="PI-overview-education">MIT</p>
+                    <a>Biosketch</a>
+                    <figure>
+                        <img id="PI-PFP" src="images/GenericStickFigure.png">
+                    </figure>
+                </section>
+
+                <section class="PI-video">
+                    <div class="PI-video-placeholder">
+                        <span>Intro video later</span>
+                    </div>
+                </section>
+            </div>
+
+            <div class="research-overview">
+                <h2>Research Topics</h2>
+                <p id="research-overview-general-desc">The Lindahl Lab's research covers a wide range of subjects, with an emphasis on metal models and systems biochemistry.</p>
+
+                <ul class="research-overview-grid">
+                    <li class="research-overview-item">
+                        <div class="research-overview-image-wrapper">
+                            <a class="research-overview-image" href="yeast.html">
+                                <img src="images/yeast_metalomics.jpg">
+                            </a>
+                        </div>
+                        <h3>Yeast</h3>
+                        <p>Yeast is Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <!--<a class="overview-read-more" href="default_readmore.html">Read more</a>-->
+                    </li>
+                    <li class="research-overview-item">
+                        <div class="research-overview-image-wrapper">
+                            <a class="research-overview-image" href="yeast.html">
+                                <img src="images/yeast_metalomics.jpg">
+                            </a>
+                        </div>
+                        <h3>Labile Metal</h3>
+                        <p>Yeast is Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </li>
+                    <li class="research-overview-item">
+                        <div class="research-overview-image-wrapper">
+                            <a class="research-overview-image" href="yeast.html">
+                                <img src="images/yeast_metalomics.jpg">
+                            </a>
+                        </div>
+                        <h3>
+                            Animal models
+                        </h3>
+                        <p>Yeast is Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </li>
+                    <li class="research-overview-item">
+                        <div class="research-overview-image-wrapper">
+                            <a class="research-overview-image" href="research-info/systemsbio.html">
+                                <img src="images/yeast_metalomics.jpg">
+                            </a>
+                        </div>
+                        <h3><a href="research-info/systemsbio.html">Computational Stuff</a></h3>
+                        <p>Computer Yeast is Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="contact">
+                <address class="contact-info">
+                    <section>
+                        <h2>Contact</h2>
+                        <p>First floor</p>
+                        <p>Room 153</p>
+                    </section>
+
+                    <section>
+                        <p>
+                            Department of Chemistry<br>
+                            TAMU<br>
+                            College Station, TX, 77840
+                        </p>
+                    </section>
+
+                    <section>
+                        <p>
+                            <b>Tel: </b><a href="tel: +17133916769">713-391-6769</a><br>
+                            <b>Fax: </b><a href="fax: 17133916769">713-391-6769</a><br>
+                            <b>Email: </b><a href="mailto:jms22856@tamu.edu">jms22856@tamu.edu</a>
+                        </p>
+                    </section>
+                </address>
+
+
+                <section class="contact-map">
+                    <div class="PI-video-placeholder">
+                        <span>Contact Map later</span>
+                    </div>
+                </section>
+            </div>
+        </main>
 
 
     <script src="script.js"></script>
