Additional placeholder design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <!--Hamburger nav button-->
 
                 <ul class="nav-left">
-                    <li><a href="about.html">Publications</a></li>
+                    <li><a href="publications.html">Publications</a></li>
                     <li><a href="about.html">Instrumentation</a></li>
                     <li><a href="about.html">Modeling</a></li>
                 </ul>
@@ -38,7 +38,7 @@
                 <button class="close-mobile-nav">✕</button>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">Publications</a></li>
+                    <li><a href="publications.html">Publications</a></li>
                     <li><a href="about.html">Instrumentation</a></li>
                     <li><a href="about.html">Modeling</a></li>
                     <li><a href="about.html">Members</a></li>
@@ -55,10 +55,10 @@
                     <h1>WELCOME TO THE LINDAHL LAB</h1>
                     <ul>
                         <li>Biophysical and Bioorganic Chemistry</li>
+                        <li>Mathematical Biochemistry</li>
                         <li>Iron Metabolism in Cells</li>
                         <li>Mechanistic Modeling of Biological Processes</li>
                         <li>EPR and Mossbauer Spectroscopy</li>
-                        <li>Systems Biology</li>
                     </ul>
                 </section>
                 <figure class="welcome-photo-container">
@@ -68,19 +68,22 @@
 
             <div class="PI-overview">
                 <section class="PI-profile">
-                    <h2 id="PI-overview-name">Paul A. Lindahl</h2>
+                    <h2 id="PI-overview-name">Principal Investigator: Paul A. Lindahl</h2>
                     <h3 id="PI-overview-title">Professor</h3>
-                    <p id="PI-overview-education">MIT</p>
+                    <p id="PI-overview-education">PHD, MIT</p>
+                    <p><a href="www.tamu.edu">Put whatever links you want here</a></p>
+                    <p>(Put Paul's PFP below)</p>
                     <a>Biosketch</a>
-                    <figure>
+                    <figure id="PI-PFP-container">
                         <img id="PI-PFP" src="images/GenericStickFigure.png">
                     </figure>
                 </section>
 
                 <section class="PI-video">
-                    <div class="PI-video-placeholder">
-                        <span>Intro video later</span>
-                    </div>
+                    <p>Put the lab video here, or I can make this into a "news" section or something similar</p>
+                    <video>
+                        <source src="placeholder-video/placeholderlabvideo.mp4" type="video/mp4">
+                    </video>
                 </section>
             </div>
 
@@ -95,7 +98,7 @@
                                 <img src="images/yeast_metalomics.jpg">
                             </a>
                         </div>
-                        <h3>Yeast</h3>
+                        <h3><a href="yeast.html">Yeast</a></h3>
                         <p>Yeast is Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         <!--<a class="overview-read-more" href="default_readmore.html">Read more</a>-->
                     </li>
@@ -105,7 +108,7 @@
                                 <img src="images/yeast_metalomics.jpg">
                             </a>
                         </div>
-                        <h3>Labile Metal</h3>
+                        <h3><a href="labile-metal.html">Labile Metal</a></h3>
                         <p>Yeast is Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </li>
                     <li class="research-overview-item">
@@ -114,8 +117,7 @@
                                 <img src="images/yeast_metalomics.jpg">
                             </a>
                         </div>
-                        <h3>
-                            Animal models
+                        <h3><a href="animal-models.html">Animal Models</a>
                         </h3>
                         <p>Yeast is Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </li>
@@ -125,8 +127,8 @@
                                 <img src="images/yeast_metalomics.jpg">
                             </a>
                         </div>
-                        <h3><a href="research-info/systemsbio.html">Computational Stuff</a></h3>
-                        <p>Computer Yeast is Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <h3><a href="research-info/systemsbio.html">Mathematical Biochemistry</a></h3>
+                        <p>Math Yeast is Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </li>
                 </ul>
 
@@ -159,8 +161,8 @@
 
 
                 <section class="contact-map">
-                    <div class="PI-video-placeholder">
-                        <span>Contact Map later</span>
+                    <div class="contact-map-placeholder">
+                        <span>Contact Map will be added later</span>
                     </div>
                 </section>
             </div>
@@ -168,5 +170,9 @@
 
 
     <script src="script.js"></script>
+
+    <div class="under-dev-label">
+        Site is still under development
+    </div>
     </body>
 </html>
