--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="about.html">Instrumentation</a></li>
                     <li><a href="about.html">Modeling</a></li>
                 </ul>
-                <a class="banner" href="/">LINDAHL LAB</a>
+                <a class="banner" href="/">HOME</a>
                 <ul class="nav-right">
                     <li><a href="about.html">Members</a></li>
                     <li><a href="about.html">Positions</a></li>
@@ -31,7 +31,7 @@
                 <button class="nav-toggle" aria-expanded="false">
                     MENU ☰
                 </button>
-                <a class="banner" href="/">LINDAHL LAB</a>
+                <a class="banner" href="/">HOME</a>
             </nav>
 
             <div class="nav-mobile">
@@ -52,13 +52,12 @@
         <main>
             <div class="welcome-title">
                 <section>
-                    <h1>WELCOME TO THE LINDAHL LAB</h1>
+                    <h1>Justin Sun</h1>
                     <ul>
-                        <li>Biophysical and Bioorganic Chemistry</li>
+                        <li>Mathematics Student at Texas A&M University</li>
+                        <li>Applied Mathematics</li>
                         <li>Mathematical Biochemistry</li>
-                        <li>Iron Metabolism in Cells</li>
-                        <li>Mechanistic Modeling of Biological Processes</li>
-                        <li>EPR and Mossbauer Spectroscopy</li>
+                        <li>Machine Learning and Data Science</li>
                     </ul>
                 </section>
                 <figure class="welcome-photo-container">
