--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                     <p>(Put Paul's PFP below)</p>
                     <a>Biosketch</a>
                     <figure id="PI-PFP-container">
-                        <img id="PI-PFP" src="images/GenericStickFigure.png">
+                        <a href="https://www.coolmathgames.com/">
+                            <img id="PI-PFP" src="images/paul.jpg" target="_blank">
+                        </a>
                     </figure>
                 </section>
 
